tests/009_configmap/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 005-tls
spec:
  ingressClassName: zproxy-ingress

  tls:
  - hosts:
    - 005.tls
    secretName: tls-cert

  rules:
  - host: 005.tls
    http:
      paths:
      - path: /uri1
        backend:
          serviceName: app-svc
          servicePort: 80

      - path: /uri2
        backend:
          serviceName: app-svc
          servicePort: 80

  - host: 005.plain
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
